Detailed header section update 1. Fixed the left and right boxes' position with flex: 1 2. Added:    a. Background color,    b. No list bullets,    c. font-size,    d. color,    e. Lists stands horizontally in the right box    f. gap    g. Position inside left and right boxes with justify-content    h. hover for links in the right box

--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body{
     display: flex;
     flex-direction: column;
     flex: 1;
-    background-color: aqua;
     height: 100vh;
     margin: 0;
     padding: 0;
@@ -16,8 +15,47 @@ body{
 }
 
 .header {
+    display: flex;
     flex: 1;
+    background-color: #1F2937;
+    color: #E5E7EB;
+    font-size: 18px;
+}
 
+.left{
+    display: flex;
+    justify-content: flex-start;
+    flex: 1;
+    padding: 20px;
+    margin: 20px;
+}
+
+.right {
+    display: flex;
+    justify-content: flex-end;    
+    flex: 1;
+    padding: 20px;
+    margin: 20px;
+
+}
+
+
+
+
+ul{
+    display: flex;
+    list-style-type: none;
+    gap: 8px;
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
+
+}
+
+a:hover {
+    border-bottom: 6px solid #E5E7EB;
 
 }
 
